...
    <string name="no_data">No data</string>
    <string name="no_matching_rows">No rows found.</string>
    <string name="edit">Edit</string>
    <string name="write_access_control_group">Write Access Control Group:</string>
    <string name="read_access_control_group">Read Access Control Group:</string>
    <string name="select_view">Select View</string>
    <string name="spreadsheet">Spreadsheet</string>
    <string name="error_while_changing_group_by_columns">Error while changing group by columns</string>
    <string name="error_while_changing_sort_column">Error while changing sort column</string>
    <string name="error_while_changing_index_column">Error while changing index column</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="navigate">Navigate</string>
    <string name="preferred_view_type">Preferred View Type</string>
    <string name="sms_shortcut_name">Shortcut Name</string>
    <string name="sms_shortcut_input">Shortcut Input</string>
    <string name="sms_shortcut_output">Shortcut Output</string>
...
    <string name="configuring_app">Configuring %1$s</string>
    <string name="sync_not_found">ODK-X Services is not installed</string>

    <string name="no_table_data">No Data Tables</string>
    <string name="database_unavailable">Database Unavailable</string>

    <string name="file_not_under_app_dir">File is not located under %1$s directory</string>
    <string name="no_form_id_specified">Form Id must be specified</string>
    <string name="survey_not_installed">ODK-X Survey is not installed</string>
    <string name="collect_not_installed">ODK Collect is not installed</string>

    <string name="unable_to_save_db_changes">Unable to save database changes</string>
    <string name="unable_to_retrieve_form_type">Unable to retrieve form type</string>
...
