...
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_row"
        android:showAsAction="always" />
    
    <!-- Select a view -->
    <item
        android:id="@+id/top_level_table_menu_select_view"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/select_view"
        android:showAsAction="always" >
        
        <!-- View submenu -->
        <menu>
...
	                android:title="@string/map" />
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/top_level_table_menu_table_properties"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/preferences"
        android:showAsAction="always" />
            

</menu>
...
