...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<android.webkit.WebView
		android:id="@+id/webkit"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone"
	/>
	
	<!-- empty view -->
...
